# scc

./: .gitignore  CMakeLists.txt  Function.cpp  Function.h  LICENSE.txt  Linker.cpp  Settings.h  scc.cpp
runtime/linux/: process.c
runtime/windows/: loader.c  loader.h
